--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,4 @@ fastapi==0.115.6
 uvicorn==0.34.0
 SQLAlchemy==2.0.36
 requests==2.31.0
-prometheus-client==0.21.1
-starlette==0.41.3
-
+prometheus-fastapi-instrumentator==7.0.0
