--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,6 +40,18 @@ services:
     networks:
       - monitoring
 
+  swaggerui:
+    image: swaggerapi/swagger-ui
+    ports:
+      - "80:8080"
+    environment:
+      - BASE_URL=/swagger
+      - SWAGGER_JSON=weather_api:8000/openapi.json
+    depends_on:
+      - api
+    networks:
+      - monitoring
+
   grafana:
     image: grafana/grafana
     ports:
